[package]
name = "gpmf"
version = "0.1.2"
edition = "2021"
description = "WIP gpmf implementation"
authors = ["Apps4u_co"]
#homepage="http://apps4u.co/"
documentation="https://docs.rs/gpmf"
repository="https://github.com/apps4uco/gpmf"
keywords = ["gpmf","gopro","hero","sensors","geospatial"]
categories = ["data-structures","encoding","parser-implementations"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# In a future version add a feature to use nom to parse the stream
#[features]
#default=["byteorder"]

[dependencies]
#TODO change to thiserror or similar for 1.0 release
anyhow="1.0.70"
#nom = {version="7.1.3",optional=true}
num_enum = "0.5.11"
strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"] }
#byteorder = { version = "1.4.3", optional = true }
byteorder = "1.4.3"
fixed = "1.23.1"
#chrono = "0.4.24"
chrono = { version = "0.4.24", default-features = false, features=["clock","std"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.16"
tracing-error = "0.2.0"

[dev-dependencies]
